[package]
name = "rust-digital-rain"
version = "1.0.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.10.1"
libc = "0.2"
proctitle = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
walkdir = "2"

[profile.release]
opt-level = 3